style.css
/* =================================================== */
/* Fonts */
/* =================================================== */

@font-face {
	font-family: 'Mazzard';
	font-weight: 400;
	src: url('./fonts/mazzard-h-regular.woff2') format('woff2');
}

@font-face {
	font-family: 'Mazzard';
	font-weight: 600; c 
	src: url('./fonts/mazzard-h-semibold.woff2') format('woff2');
}

@font-face {
	font-family: 'Mazzard';
	font-weight: 700;
	src: url('./fonts/mazzard-h-bold.woff2') format('woff2');
}


/* =================================================== */
/* Variables */
/* =================================================== */

:root {
	--iceberg: #D6EBE4;
	--coral: #F18B62;
	--navy: #213053;
	--mustard: #FFCD28;
	--mint: #20BFA9;
	--icewhite: #F9FAFB;
	--darkgreen: #105559;
	--lightpink: #FAE2DA;
	--grass: #2D947A;
	--bubblegum: #F86C9C;
	--brown: #270000;
	--skyblue: #1787FC;
	--orange: #F18B62;
	--iceacle: #EBF5FF;
	--blackboard: #2E2E36;
	--coolgrey: #7F828A;
	--greycloud: #DFDFDF;
	--palepink: #FFF8F8;
	--offwhite: #F5F5F5;
	--red: #F8574C;
	--midnight: #1D263A;
	--white:  #FFFFFF;
	--navybutton: #0A043C;
	--lightgrey: #1D263A;
}


/* =================================================== */
/* Elements */
/* =================================================== */

body {
	font-family: 'Mazzard', sans-serif;
}

a {
	text-decoration: none;
}


/* =================================================== */
/* Utilities */
/* =================================================== */

.u-wrap {
	margin: 0 auto;
	max-width: 1360px;
	padding: 32px;
	width: 100%;
}


/* =================================================== */
/* Section: Hero */
/* =================================================== */

.hero {
	background-color: var(--iceberg);
	height: 924px;
}

@media(max-width: 640px) {
	.hero {
		width: auto;
	}
}

.hero__logo {
	color: var(--navy);
	font-size: 24px;
	font-weight: 700;
	padding-right: 56px;
}

.hero__dot {
	color: var(--coral);
}

.hero__head {
	display: flex;
	border-bottom: 1px solid var(--lightgrey);
	padding-bottom: 20px;
	position: absolute;
}

@media(max-width: 640px) {
	.hero__head {
		position: relative;
	}
}

.hero__nav {
	padding-top: 5px;
}

@media(max-width: 640px) { 
	.hero__nav {
		display: none;
	}
}

.hero__link {
	color: var(--midnight);
	font-size: 17px;
	font-weight: 600;
	padding-right: 40px;
}

.hero__link.hero__link--right {
	padding-left: 300px;
}

.hero__button {
	color: var(--white);
	border-radius: 10px;
	background: var(--navybutton);
	padding: 16px 32px 14px 31px; 
}

.hero__icon {
		display: none;
	}
	
@media(max-width: 640px) {
	.hero__icon {
		display: block;
		padding-left: 380px;
		}
}
	
.hero__title {
	font-size: 80px;
	max-width: 600px;
	padding: 153px 0 19px 0;
}

@media(max-width: 640px) {
.hero__title {
	font-size: 42px;
	text-align: center;
	padding-top: 42px;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
	}
}

.hero__subtitle {
	color: var(--midnight);
	font-size: 21px;
	font-weight: 400;
	line-height: 32px;
	padding-bottom: 53px;
	width: 500px;
}

@media(max-width: 640px) {
	.hero__subtitle {
		font-size: 15px;
		text-align: center;
		margin-left: auto;
		margin-right: auto;
		width: 50%;
	}
}

.hero__form {
	background-color: var(--white);
	border-radius: 15px;
	box-shadow: 0 3px 10px rgb(0 0 0 / 0.1);
	bottom: 53%;
	padding: 15px 15px 15px 25px;
	position: absolute;
	height: 90px;
	width: 746px;
}

@media(max-width: 640px) {
	.hero__form {
		width: auto;
	}
}

.hero__input {
	display: block;
	width: 250px;
}

.hero__label {
	padding-top: 7px;
	float: inline-start;
}

.hero__button.hero__button--second {
	float: inline-end;
	margin-top: 3px;
}

.hero__body {
	color: var(--midnight);
	bottom: 47%;
	font-size: 17px;
	font-weight: 700;
	padding-top: 32px;
	position: absolute;
	width: 100%;
}

.hero__body.hero__body--second {
	padding-left: 5px;
	opacity: 70%;
}

